--- a/style/flags/stylesheets/flags16.css
+++ b/style/flags/stylesheets/flags16.css
@@ -267,4 +267,5 @@
 .flag16.congo-brazzaville{background-position:0 -4208px;}
 .flag16.rd-congo{background-position:0 -4224px;}
 .flag16.rda{background-position:0 -4240px;}
-
+.flag16.kurdistan{background-position:0 -4256px;}
+.flag16.daech{background-position:0 -4272px;}
