--- a/style/flags/stylesheets/flags32.css
+++ b/style/flags/stylesheets/flags32.css
@@ -267,3 +267,5 @@
 .flag32.congo-brazzaville{background-position:0 -8416px;}
 .flag32.rd-congo{background-position:0 -8448px;}
 .flag32.rda{background-position:0 -8480px;}
+.flag32.kurdistan{background-position:0 -8512px;}
+.flag32.daech{background-position:0 -8544px;}
