--- a/style/flags/stylesheets/flags16.css
+++ b/style/flags/stylesheets/flags16.css
@@ -269,3 +269,4 @@
 .flag16.rda{background-position:0 -4240px;}
 .flag16.kurdistan{background-position:0 -4256px;}
 .flag16.daech{background-position:0 -4272px;}
+.flag16.sikkim{background-position:0 -4288px;}
