--- a/style/flags/stylesheets/flags32.css
+++ b/style/flags/stylesheets/flags32.css
@@ -269,3 +269,4 @@
 .flag32.rda{background-position:0 -8480px;}
 .flag32.kurdistan{background-position:0 -8512px;}
 .flag32.daech{background-position:0 -8544px;}
+.flag32.sikkim{background-position:0 -8576px;}
