--- a/style/flags/stylesheets/flags16.css
+++ b/style/flags/stylesheets/flags16.css
@@ -270,3 +270,4 @@
 .flag16.kurdistan{background-position:0 -4256px;}
 .flag16.daech{background-position:0 -4272px;}
 .flag16.sikkim{background-position:0 -4288px;}
+.flag16.azawad{background-position:0 -4304px;}
