--- a/style/flags/stylesheets/flags32.css
+++ b/style/flags/stylesheets/flags32.css
@@ -270,3 +270,4 @@
 .flag32.kurdistan{background-position:0 -8512px;}
 .flag32.daech{background-position:0 -8544px;}
 .flag32.sikkim{background-position:0 -8576px;}
+.flag32.azawad{background-position:0 -8608px;}
